# pypsa-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml  seed.jsonl  tsconfig.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: pick-up.md  ship.md  sync-upstream.md
.claude/project/: branching.md  github-project.md  issue-workflow.md  main-pr-strategy.md  sprint-workflow.md
.github/actions/build-package/: action.yaml
.github/workflows/: codeql.yml  push-image.yaml
compose/: .env.example  compose.dev.yaml
docs/: configuration.md
frontend/app/: package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/app/src/: app.css
frontend/app/src/lib/: types.ts  uuid.test.ts  uuid.ts
frontend/app/src/lib/api/: chat.test.ts  chat.ts  client.ts
frontend/app/src/lib/charts/: plotly.test.ts
frontend/app/src/lib/components/ai-elements/code/: Code.svelte  CodeCopyButton.svelte  CodeOverflow.svelte
frontend/app/src/lib/components/ai-elements/copy-button/: CopyButton.svelte
frontend/app/src/lib/components/ai-elements/message/: index.ts
frontend/app/src/lib/components/ai-elements/prompt-input/: index.ts
frontend/app/src/lib/components/ai-elements/reasoning/: Reasoning.svelte  ReasoningContent.svelte  ReasoningTrigger.svelte  Response.svelte  index.ts
frontend/app/src/lib/components/ai-elements/response/: Response.svelte  index.ts
frontend/app/src/lib/components/ai-elements/suggestion/: Suggestion.svelte  Suggestions.svelte
frontend/app/src/lib/components/ai-elements/tool/: Tool.svelte  ToolContent.svelte  ToolHeader.svelte  ToolInput.svelte  ToolOutput.svelte  index.ts
frontend/app/src/lib/components/chat/: ChatFab.svelte  ChatHeader.svelte  ChatHeader.test.ts  ChatInput.svelte  ChatInput.test.ts  ChatModal.svelte  ChatRenderer.svelte  ToolResultRenderer.svelte  ToolResultRenderer.test.ts  toolRenderers.test.ts  toolRenderers.ts
frontend/app/src/lib/components/chat/charts/: ChatBarChart.svelte  ChatBarChart.test.ts  ChatDataTable.svelte  ChatDataTable.test.ts  ChatLineChart.svelte  ChatLineChart.test.ts  ChatPieChart.svelte  ChatPieChart.test.ts
frontend/app/src/lib/components/chat/tools/: JsonRenderer.svelte  JsonRenderer.test.ts  NetworkCardRenderer.svelte  NetworkCardRenderer.test.ts  NetworksTableRenderer.svelte  NetworksTableRenderer.test.ts  StatisticsRenderer.svelte  StatisticsRenderer.test.ts
frontend/app/src/lib/components/ui/badge/: badge.svelte
frontend/app/src/lib/components/ui/button-group/: button-group-separator.svelte  button-group-text.svelte  button-group.svelte
frontend/app/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte
frontend/app/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-shortcut.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
frontend/app/src/lib/stores/: chat.svelte.ts  chatModal.svelte.ts  chatStore.test.ts  features.svelte.ts  features.test.ts  network.svelte.ts  network.test.ts  reportStore.svelte.ts
frontend/app/src/lib/types/: chat.test.ts  chat.ts
frontend/app/src/lib/utils/: uuid.ts
frontend/app/src/routes/: +layout.svelte
frontend/app/src/routes/networks/[id]/: +layout.svelte
frontend/app/src/routes/networks/components/: RegisterPathDialog.svelte  UploadButton.svelte
frontend/app/src/test-stubs/: app-navigation.ts
patches/: @ai-hero+sandcastle+0.5.7.patch
src/pypsa_app/backend/: main.py  models.py  settings.py  spa_static_files.py
src/pypsa_app/backend/alembic/: env.py  lock.py
src/pypsa_app/backend/alembic/versions/: 0007_network_is_solved.py
src/pypsa_app/backend/api/: deps.py  pagination.py
src/pypsa_app/backend/api/routes/: admin.py  networks.py  networks_local.py  networks_remote.py  version.py
src/pypsa_app/backend/api/routes/admin/: __init__.py  backends.py  meta.py  networks.py  runs.py  users.py
src/pypsa_app/backend/filters/: __init__.py  ast.py  sqla.py
src/pypsa_app/backend/schemas/: auth.py  backend.py  common.py  network.py  plot.py  run.py  version.py
src/pypsa_app/backend/services/: explore.py  network.py  statistics.py
src/pypsa_app/backend/utils/: allowlists.py  errors.py  validation.py
src/pypsa_app/llm/: chat.py  client.py  events.py  exceptions.py  prompts.py  schemas.py  service.py  settings.py
src/pypsa_app/llm/api/: deps.py  routes.py  schemas.py
src/pypsa_app/llm/tools/: __init__.py  base.py  get_network_detail.py  get_network_statistics.py  http_client.py  list_networks.py
tests/: conftest.py  test_register_path.py
tests/backend/: test_alembic_advisory_lock.py  test_allowlists.py  test_main_router_registration.py  test_settings.py  test_spa_static_files.py  test_statistics_service.py  test_version_route.py
tests/e2e/: compose.disabled.yaml  compose.stub.yaml  compose.yaml  run.sh  test_01_health.py  test_02_chat_disabled.py  test_03_chat_enabled_basic_stream.py  test_04_chat_tool_call_list_networks.py  test_05_chat_abort.py  test_compose_disabled.py  test_compose_file.py  test_compose_stub.py  test_e2e_workflow.py  test_run_sh.py
tests/e2e/lib/: sse_parse.py  test_sse_parse.py
tests/e2e/stub_llm/: Dockerfile  __init__.py  __main__.py  app.py  test_app.py
tests/e2e/tests/: 01_health.sh  02_chat_disabled_returns_404.sh  03_chat_enabled_basic_stream.sh  04_chat_tool_call_list_networks.sh  05_chat_abort.sh
tests/llm/: test_chat_tool_loop.py  test_client.py  test_deps.py  test_events.py  test_imports.py  test_live_provider.py  test_prompts.py  test_registry.py  test_route_disabled.py  test_routes.py  test_schemas.py  test_service.py  test_settings.py
tests/llm/tools/: test_base.py  test_get_network_detail.py  test_get_network_statistics.py  test_http_client.py  test_list_networks.py  test_registry.py
(+45 files in other folders)
