[project]
name = "pypsa-app"
description = "tbd"
dynamic = ["version"]
authors = [
    { name = "Lukas Trippe", email = "lkstrp@pm.me" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
keywords = ["pypsa", "energy", "power-systems", "visualization"]

dependencies = [
    "fastapi>=0.136",
    "starlette>=1.0,<2",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "sqlalchemy>=2.0,<3",
    "pypsa>=1.2,<2",
    "pandas>=3.0,<4",
    "click>=8.3",
    "authlib>=1.7,<2",
    "itsdangerous>=2.2",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.27",
    "alembic>=1.18",
    "jinja2>=3.1,<4",
    "markupsafe>=3.0,<4",
]

[project.optional-dependencies]
full = [
    "psycopg2-binary>=2.9",
    "redis>=6.4,<7",
    "celery[redis]>=5.6,<6",
]

dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
]

[project.scripts]
pypsa-app = "pypsa_app.cli:main"

[project.urls]
Homepage = "https://app.pypsa.org"
Documentation = "https://github.com/PyPSA/pypsa-app/blob/main/README.md"
Repository = "https://github.com/PyPSA/pypsa-app"
Issues = "https://github.com/PyPSA/pypsa-app/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pypsa_app.backend" = ["static/**/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.uv]
exclude-newer = "7 days"

[tool.ruff.lint]
select = [
    'F',        # pyflakes
    'E',        # pycodestyle: Error
    'W',        # pycodestyle: Warning
    'I',        # isort
    'UP',       # pyupgrade
    'PL',       # pylint
    'PERF',     # perflint
    'ANN',      # flake8-annotations
    'ASYNC',    # flake8-async
    'TID',      # flake8-tidy-imports
    'S',        # flake8-bandit
    'B',        # flake8-bugbear
    'C4',       # flake8-comprehensions
    'EM',       # flake8-errmsg
    'G',        # flake8-logging-format
    'PIE',      # flake8-pie
    'T20',      # flake8-print
    'PYI',      # flake8-pyi
    'PT',       # flake8-pytest-style
    'SIM',      # flake8-simplify
    'TC',       # flake8-type-checking
    'PTH',      # flake8-use-pathlib
    'RUF013',   # ruff
    'ERA',      # eradicate
    'TRY',      # tryceratops
]

ignore = [
    'ANN401',   # Dynamically typed expressions are forbidden
    'B008',     # function call in default argument value
]

[tool.ruff.lint.per-file-ignores]
"src/pypsa_app/backend/alembic/**" = ["ALL"]
"{test,tests,examples,doc,docs}/**" = [
    'ERA',      # eradicate
    'S',        # flake8-bandit
    'B',        # flake8-bugbear
    'EM',       # flake8-errmsg
    'T20',      # flake8-print
    'SIM',      # flake8-simplify
    'ARG',      # flake8-unused-arguments
    'PL',       # pylint
    'TRY',      # tryceratops
    'ANN',      # flake8-annotations
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
